# messenger-web-app

./: .gitignore  README.md
messenger.backend/: app.py  network.py  pydantic_models.py  pyproject.toml  pyvenv.cfg
messenger.backend/messenger/: app.py  configuration.py  helpers.py
messenger.frontend/: .env.local  package-lock.json  package.json
messenger.frontend/components/: ChatList.js  ConnectionMessageHandler.js  Dialogue.js  InformationBox.js  NetCommand.js  Socket.js
messenger.frontend/pages/: index.js  login.js  messenger.js
messenger.frontend/styles/: Home.module.scss  Login.module.scss  Messenger.module.scss  globals.css
